<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/config_layout">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ipTextID"
        android:layout_gravity="center_horizontal"
        android:text="@string/homeIP_jesse" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/default_port"
        android:ems="10"
        android:id="@+id/portTextID" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/connectButton"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit" />
</LinearLayout>